@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2011 the original author or authors.
+ * Copyright 2002-2012 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -103,6 +103,7 @@ public class HandlerMethodAnnotationDetectionTests {
 		context.refresh();
 
 		handlerMapping.setApplicationContext(context);
+		handlerMapping.afterPropertiesSet();
 		handlerAdapter.afterPropertiesSet();
 		exceptionResolver.afterPropertiesSet();
 	}
